# gltut2

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  Makefile  camera.cpp  camera.h  context.h  exception.h  glad.c  image.cpp  image.h  lighting_context.cpp  main.cpp  main_context.cpp  main_context.h  makedepend.sh  meshes.h  shader.cpp  shader.h  system.cpp  system.h  text_context.cpp  text_context.h
common/: CMakeLists.txt  camera.h  context.h  glad.c  image.cpp  scene.h
common/glad/: glad.h
program/: CMakeLists.txt  main.cpp  scene_loader.cpp  scene_loader.h
res/: AppIcon.icns  lamp.fs  lamp.vs  lighting.fs  lighting.vs  shader.fs  shader.vs  shader1.fs  shader2.fs  shader3.fs  shader3.vs  text_shader.fs  text_shader.vs
scene/: CMakeLists.txt  scene.cpp
